# espnet

./: .gitignore  404.html  about_this_doc.html  additional_citations.html  citations.html  devcontainer.html  docker.html  document.html  espnet1_tutorial.html  espnet2_distributed.html  espnet2_format_wav_scp.html  espnet2_task.html  espnet2_training_option.html  espnet2_tutorial.html  faq.html  flake.nix  index.html  installation.html  parallelization.html  pixi.toml  pyproject.toml  tutorial.html
espnet/nets/: e2e_asr_common.py
espnet2/asr/: ctc.py  espnet_model.py
espnet2/tasks/: asr.py
espnet2/train/: trainer.py
guide/: index.html
guide/espnet/: index.html
guide/espnet2/: index.html
guide/espnetez/: index.html
notebook/: index.html
notebook/ESPnet1/: asr_library.html  asr_recipe.html  index.html  pretrained.html  st_demo.html  tts_realtime_demo.html  tts_recipe.html
notebook/ESPnet2/: index.html
notebook/ESPnetEZ/: index.html
recipe/: asr1.html  asr2.html  asvspoof1.html  cls1.html  codec1.html  diar1.html  enh1.html  enh_asr1.html  enh_diar1.html  enh_st1.html  hubert1.html  index.html  lid1.html  lm1.html  mt1.html  s2st1.html  s2t1.html  sds1.html  slu1.html  speechlm1.html  spk1.html  ssl1.html  st1.html  svs1.html  svs2.html  tts1.html  tts2.html  uasr1.html
tools/: activate_python.sh  index.html
tools/espnet2_bin/: aggregate_stats_dirs.html  asr_align.html  asr_inference.html  asr_inference_maskctc.html  asr_inference_streaming.html  asr_transducer_inference.html  asvspoof_inference.html  cls_inference.html  diar_inference.html  (+33 more)
(+2022 files in other folders)
