[project]
name = "espnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "lightning>=2.6.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "espnet"
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" }
]
torchaudio = [
    { index = "torch-cu128" }
]
torchvision = [
    { index = "torch-cu128" }
]
espnet = { path = ".[train, recipe]", editable = true }

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
